--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -4,7 +4,7 @@ body{
 }
 .header{
     height: 100px;
-    padding: 30px 15px 0;
+    padding: 25px 15px 10px;
     font-size: 30px;
     text-align: left;
     background-color: #eee;
@@ -35,7 +35,9 @@ main{
 }
 
 #sbtn{
-    height: 100px;
+    width: 60px;
+    padding: 20px;
+    font-size: 60px;
 }
 
 .localNavigation{
