--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -32,17 +32,27 @@ main{
     padding: 2px 4px;
     height: 30px;
     width: 300px;
+    border-radius: 5px;
 }
 
 #sbtn{
-    width: 60px;
-    padding: 20px;
-    font-size: 60px;
-}
+    display: inline-block;
+    padding: 0.5em 5em;
+    text-decoration: none;
+    color: #67c5ff;
+    border: solid 2px #67c5ff;
+    border-radius: 3px;
+    transition: .4s;
+  }
+  
+  #sbtn:hover {
+    background: #67c5ff;
+    color: white;
+  }
 
 .localNavigation{
     text-align: center;
-    background-color: #888;
+    background-color: #fff;
     color: #fff;
     width: 450px;
     padding: 15px;
