--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,10 +4,10 @@ body{
 }
 .header{
     height: 100px;
-    padding: 25px 15px 10px;
+    padding: 30px 15px 0;
     font-size: 30px;
     text-align: left;
-    background-color: #428ff4;
+    background-color: #eee;
 }
 
 main{
@@ -19,6 +19,7 @@ main{
     flex: 1;
     background-color: #eee;
     text-align: center;
+    padding: 0;
     margin-right: 10px;
 }
 
@@ -36,19 +37,19 @@ main{
 }
 
 #sbtn{
-    display: inline-block;
-    padding: 0.5em 5em;
-    text-decoration: none;
-    color: #67c5ff;
-    border: solid 2px #67c5ff;
-    border-radius: 3px;
-    transition: .4s;
-  }
-  
-  #sbtn:hover {
-    background: #67c5ff;
-    color: white;
-  }
+display: inline-block;
+  padding: 0.5em 5em;
+  text-decoration: none;
+  color: #67c5ff;
+  border: solid 2px #67c5ff;
+  border-radius: 3px;
+  transition: .4s;
+}
+
+#sbtn:hover {
+  background: #67c5ff;
+  color: white;
+}
 
 .localNavigation{
     text-align: center;
@@ -65,5 +66,5 @@ main{
 .footer{
     height: 70px;
     text-align: center;
-    background-color: #428ff4;
+    background-color: #eee;
 }
