--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,26 @@ body{
     text-align: left;
     background-color: #eee;
 }
+.icon{
+    float: left;
+}
+.bottons{
+    float: right;
+}
+.btn-flat-border {
+    display: inline-block;
+    padding: 0.3em 1em;
+    text-decoration: none;
+    color: #67c5ff;
+    border: solid 2px #67c5ff;
+    border-radius: 3px;
+    transition: .4s;
+  }
+  
+  .btn-flat-border:hover {
+    background: #67c5ff;
+    color: white;
+  }
 
 main{
     display: flex;
