--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,9 @@ body{
     float: left;
 }
 .bottons{
+    padding: 50px 10px 0;
+    margin: 0 20px 10px;
+    font-size: 17px;
     float: right;
 }
 .btn-flat-border {
