地図を小さめに表示

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,7 +42,7 @@ main{
     flex: 1;
     background-color: #eee;
     text-align: center;
-    padding: 0;
+    margin: 50px;
     margin-right: 10px;
 }
 
@@ -79,7 +79,7 @@ display: inline-block;
     background-color: #fff;
     color: #fff;
     width: 450px;
-    padding: 15px;
+    padding: 30px;
 }
 
 .shop_link{
