--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@ body{
     padding: 30px 15px 0;
     font-size: 30px;
     text-align: left;
-    background-color: #eee;
+    background-color: #fff;
 }
 .icon{
     float: left;
@@ -37,6 +37,7 @@ main{
     display: flex;
     min-height: 100vh;
     margin: 10px 0 10px 0;
+    background-color: #F5FFFA
 }
 .content{
     flex: 1;
@@ -57,6 +58,7 @@ main{
     height: 30px;
     width: 300px;
     border-radius: 5px;
+    color: #666666
 }
 
 #sbtn{
@@ -76,7 +78,6 @@ display: inline-block;
 
 .localNavigation{
     text-align: center;
-    background-color: #fff;
     color: #fff;
     width: 450px;
     padding: 30px;
