--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@ body{
     padding: 30px 15px 0;
     font-size: 30px;
     text-align: left;
-    background-color: #fff;
+    background-color: #b28653;
 }
 .icon{
     float: left;
@@ -37,11 +37,11 @@ main{
     display: flex;
     min-height: 100vh;
     margin: 10px 0 10px 0;
-    background-color: #F5FFFA
+    background-color: rgb(31, 218, 93)
 }
 .content{
     flex: 1;
-    background-color: #eee;
+    background-color: rgb(31, 218, 93);
     text-align: center;
     margin: 50px;
     margin-right: 10px;
@@ -78,17 +78,17 @@ display: inline-block;
 
 .localNavigation{
     text-align: center;
-    color: #fff;
+    color: rgb(31, 218, 93);
     width: 450px;
     padding: 30px;
 }
 
 .shop_link{
     text-align: left;
-    color: #eee;
+    color: rgb(48, 117, 207);
 }
 .footer{
     height: 70px;
     text-align: center;
-    background-color: #eee;
+    background-color: #b28653;
 }
