長い長い戦いの終わり

--- a/public/css/top_map.css
+++ b/public/css/top_map.css
@@ -7,3 +7,45 @@
     margin: 0;
     padding: 0;
   }
+  body {
+    background-color: #f5f5f5;
+  }
+  
+  .tab-menu {
+    width: 450px;
+    margin: 30px;
+  }
+  
+  .tab-menu ul {
+    margin: 0;
+    padding: 0;
+    margin-top: 50px;
+  }
+  
+  .tab-menu li {
+    display: inline-block;
+    width: 150px;
+    height: 22px;
+    padding: 10px 10px 5px;
+    cursor: pointer;
+    background-color: #AECD6A;
+    border-top-right-radius: 10px;
+    font-size: 14px;
+    color: #fff;
+    text-align: center;
+  }
+  
+  .tab-menu li.selected {
+    background-color: #fff;
+    color: #AECD6A;
+  }
+  
+  .contents {
+    background-color: #fff;
+    height: 360px;
+    padding: 20px;
+  }
+  
+  .contents .right {
+    display: none;
+  }
