--- a/public/css/top_map.css
+++ b/public/css/top_map.css
@@ -2,6 +2,10 @@
     height: 100%;
     width:100%;
   }
+  #searchmap {
+    height: 100%;
+    width:100%;
+  }
   html, body {
     height: 100%;
     margin: 0;
