--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,14 @@ body{
     display: flex;
     flex-direction: column;
 }
+
+.wrapper{
+  min-height: 100vh;
+  position: relative;/*←相対位置*/
+  padding-bottom: 120px;/*←footerの高さ*/
+  box-sizing: border-box;/*←全て含めてmin-height:100vhに*/
+}
+
 .header{
     height: 100px;
     padding: 30px 15px 0;
@@ -99,10 +107,12 @@ display: inline-block;
     color: rgb(48, 117, 207);
 }
 .footer{
-    height: 70px;
+    width: 100%;
     text-align: center;
     background-color: #333333;
     color: #ffff;
+    padding: 30px 0;
+    position: absolute;
 }
 
 
