--- a/public/css/style.css
+++ b/public/css/style.css
@@ -236,31 +236,6 @@ html{    background:url(http://thekitemap.com/images/feedback-img.jpg) no-repeat
   background-repeat: no-repeat;
 }
 
-#button-blue-signup{
-  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-  float:left;
-  width: 100%;
-  border: #fbfbfb solid 4px;
-  cursor:pointer;
-  background-color: #3498db;
-  color:white;
-  font-size:24px;
-  margin: 10px;
-  padding-top:22px;
-  padding-bottom:22px;
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  transition: all 0.3s;
-  font-weight:700;
-  background-size: 30px 30px;
-  background-position: 11px 8px;
-  background-repeat: no-repeat;
-}
-
-#button-blue-signup:hover{
-  background-color: rgba(0,0,0,0);
-  color: #0493bd;
-}
 
 .field{
     margin: 10px;
@@ -376,6 +351,10 @@ input:focus, textarea:focus {
 #button-blue:hover{
   background-color: rgba(0,0,0,0);
   color: #0493bd;
+}
+
+.submit{
+  margin-top: 10px;
 }
   
 .submit:hover {
