--- a/public/css/style.css
+++ b/public/css/style.css
@@ -150,18 +150,23 @@ html{    background:url(http://thekitemap.com/images/feedback-img.jpg) no-repeat
 
 #form-div {
   background-color:rgba(72,72,72,0.4);
+  color: #fff;
   padding-left:35px;
   padding-right:35px;
   padding-top:35px;
   padding-bottom:50px;
   width: 450px;
-  float: left;
+  float: center;
   left: 50%;
   position: absolute;
   margin-top:30px;
   margin-left: -260px;
   -moz-border-radius: 7px;
   -webkit-border-radius: 7px;
+}
+
+.text_done{
+  text-align: center;
 }
 
 .feedback-input {
