--- a/public/css/style.css
+++ b/public/css/style.css
@@ -419,7 +419,15 @@ input:focus, textarea:focus {
   -webkit-border-radius: 7px;
 }
 
+h2{
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight:500;
+  text-align: center;
+  color: #fff;
+}
+
 .card {
+  margin: 30px;
   background: #fff;
   border-radius: 5px;
   box-shadow: 0 2px 5px #ccc;
