--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@ body{
 .wrapper{
   min-height: 100vh;
   position: relative;/*←相対位置*/
-  padding-bottom: 120px;/*←footerの高さ*/
+  padding-bottom: 100px;/*←footerの高さ*/
   box-sizing: border-box;/*←全て含めてmin-height:100vhに*/
 }
 
@@ -56,29 +56,31 @@ main{
     display: flex;
     min-height: 100vh;
     margin: 0;
+    background-color: #333333;
 }
 .content{
     flex: 1;
     text-align: center;
-    margin: 20px;
+    margin: 30px;
+    padding: 20px;
+    background-color: #fff; 
 }
 
 .localNavigation{
-  margin-left: 30px;
   background-color: #333333;
   width: 40%;
   padding: 30px;
 }
 
 #search{
-    margin: 20px;
+    margin: 30px;
 }
 
 #sbox{
   outline:0;
     font-size: 15px;
     padding: 2px 4px;
-    margin: 15px;
+    margin: 15px 15px 15px 0;
     height: 30px;
     width: 300px;
     border-radius: 5px;
@@ -134,7 +136,7 @@ display: inline-block;
 
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 
-html{    background:url(http://thekitemap.com/images/feedback-img.jpg) no-repeat;
+html{    background:url(http://thekitemap.com/images/feedback-img.jpg) fixed;
   background-size: cover;
   height:100%;
 }
