--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,29 +73,33 @@ main{
 }
 
 #search{
-    margin: 30px;
+    margin: 0 30px 30px;
 }
 
 #sbox{
   outline:0;
     font-size: 15px;
     padding: 2px 4px;
-    margin: 15px 15px 15px 0;
+    margin-bottom: 20px;
     height: 30px;
     width: 300px;
     border-radius: 5px;
     color: #666666;
 }
 
+.sbtn{
+  margin-left: auto;
+  margin-right: auto;
+}
+
 #sbtn{
-display: inline-block;
+  display: inline-block;
   padding: 0.5em 5em;
   text-decoration: none;
   color: #67c5ff;
   border: solid 2px #67c5ff;
   border-radius: 3px;
   transition: .4s;
-  margin-left: 30px;
 }
 
 #sbtn:hover {
