--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,7 +61,7 @@ main{
 .content{
     flex: 1;
     text-align: center;
-    margin: 30px;
+    margin: 30px 30px 30px 70px;
     padding: 20px;
     background-color: #fff; 
 }
@@ -69,11 +69,7 @@ main{
 .localNavigation{
   background-color: #333333;
   width: 40%;
-  padding: 30px;
-}
-
-.left{
-  line-height: 1em;
+  padding: 30px 70px 30px 30px;
 }
 
 #search{
@@ -115,11 +111,11 @@ main{
 }
 
 .shop_link{
-  max-height: 300px;
+  max-height: 320px;
   overflow: scroll;
   border: solid 1px white;
-  margin: 30px;
-  padding: 15px;
+  margin: 30px 30px 0 30px;
+  padding: 0 15px;
   text-align: left;
   color: rgb(48, 117, 207);
 }
