--- a/public/css/top_map.css
+++ b/public/css/top_map.css
@@ -11,9 +11,6 @@
     margin: 0;
     padding: 0;
   }
-  body {
-    background-color: #f5f5f5;
-  }
   
   .tab-menu {
     margin: 0 30px 40px 30px;
@@ -35,16 +32,16 @@
     height: 22px;
     padding: 10px 10px 5px;
     cursor: pointer;
-    background-color: #AECD6A;
+    background-color: #F8EDBF;
     border-top-right-radius: 10px;
     font-size: 14px;
-    color: #fff;
+    color: #292745;
     text-align: center;
   }
   
   .tab-menu li.selected {
     background-color: #fff;
-    color: #AECD6A;
+    color: #292745;
   }
   
   .contents {
