--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,19 +12,29 @@ body{
 }
 
 .header{
-    height: 100px;
-    padding: 30px 15px 0;
+  position: relative;
+    height: 120px;
+    padding: 15px 15px 0;
     font-size: 30px;
     text-align: left;
-}
-.icon{
+  }
+  .icon{
     float: left;
-}
+    margin: 15px 15px 0;
+  }
+  
+  #icon{
+    width: 100px;
+  }
+
 .bottons{
-    padding: 50px 10px 0;
-    margin: 0 20px 10px;
-    font-size: 17px;
-    float: right;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  padding: 50px 10px 0;
+  margin: 0 20px 10px;
+  font-size: 17px;
+  float: right;
 }
 nav{
     text-align: center;
@@ -574,7 +584,7 @@ h2{
   padding-right: 35px;
   padding-top: 35px;
   padding-bottom: 50px;
-  min-width: 300px;
+  min-width: 320px;
   justify-content: center;
   left: 50;
   margin: 30px;
@@ -583,5 +593,12 @@ h2{
 }
 
 #shop_avatar{
-  width: 300px;
+  object-fit: cover;
+  width: 320px;
+  height: 250px;
+}
+
+h3 a{
+  text-decoration: none;
+  color: #fff;
 }
