toppageの説明文を少し挿入

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -607,3 +607,13 @@ h3 a{
   text-decoration: none;
   color: #fff;
 }
+
+/*トップページの説明用*/
+
+.explain{
+  color: #fff;
+}
+
+.allShop{
+  color: #fff;
+}
