--- a/public/css/style.css
+++ b/public/css/style.css
@@ -631,6 +631,10 @@ h3 a:hover{
   border-bottom: 2px solid #f6c71e;
 }
 
+h3{
+  color: #fff;
+}
+
 /*トップページの説明用*/
 
 .explain{
@@ -651,4 +655,8 @@ h3 a:hover{
   margin: 10px 0;
   text-align: left;
   color: rgb(48, 117, 207);
+}
+
+.head_explain{
+  text-align: center;
 }
