--- a/public/css/style.css
+++ b/public/css/style.css
@@ -660,3 +660,24 @@ h3{
 .head_explain{
   text-align: center;
 }
+
+/* ここからAbout usページ */
+.about{
+  padding-bottom: 10px;
+  border-bottom: 1px solid #fff;
+}
+
+#form-div_about {
+  background-color: rgba(72,72,72,0.4);
+  color: #fff;
+  padding-left: 35px;
+  padding-right: 35px;
+  padding-top: 35px;
+  padding-bottom: 50px;
+  width: 600px;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 7px;
+  border-radius: 7px;
+}
